--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,38 @@
 body {
+  margin: 0;
+  text-align: center;
+}
+
+.top-container {
+  background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
+}
+
+h1 {
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.middle-container {
+  height: 200px;
+  width: 200px;
+  background-color: red;
+}
+
+.bottom-container {
+  height: 200px;
+  width: 200px;
   background-color: blue;
+}
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+}
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
 }
