--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   text-align: center;
+  font-family: 'Merriweather', serif;
+  color: #40514E
 }
 
 .top-container {
@@ -10,29 +12,130 @@ body {
 }
 
 h1 {
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 0;
+  margin: 50px auto 0 auto;
+  font-family: 'Sacramento', cursive;
+  font-size: 5.625rem;
+  color: #66BFBF;
 }
 
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2rem;
+  font-weight: normal;
+  color: #66BFBF;
+  padding-bottom: 10px;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  color: #11999E;
+}
+
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+a:hover {
+  color: #EAF6F6;
+}
+
+p {
+  line-height: 2;
+}
+.intro {
+  width: 30%;
+  margin: auto;
+}
 .middle-container {
-  height: 200px;
-  width: 200px;
-  background-color: red;
+  margin: 100px 0;
 }
 
-.bottom-container {
+.self-img {
   height: 200px;
-  width: 200px;
-  background-color: blue;
 }
+hr {
+  border: dotted  6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto ;
+}
+.bottom-container {}
+
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
+
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
+
+.skill-row {
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: left;
+
+}
+
+.skill1-img {
+  width: 25%;
+  height: 100%;
+  float:left;
+  margin-right: 30px;
+}
+
+.skill2-img {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px;
+}
+
+.copy-desc {
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+.btn {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #e1eded;
+  font-size: 20px;
+  background: #3696d6;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+/*
+.skill1-desc{
+  clear:left;
+}
+.skill2-desc {
+  clear: right;
+}
+*/
